logs/validate.20260326-083856.log
error[E0433]: failed to resolve: could not find `Chap02` in the crate root
   --> src/ParaPairs.rs:6:16
    |
  6 |     use crate::Chap02::HFSchedulerMtEph::HFSchedulerMtEph::*;
    |                ^^^^^^ could not find `Chap02` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:233:9
    |
232 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap02")))]
    |                                                 ---------------------------------------------- the item is gated here
233 | pub mod Chap02 {
    |         ^^^^^^

error[E0433]: failed to resolve: could not find `Chap02` in the crate root
   --> src/standards/hfscheduler_standard.rs:24:16
    |
 24 |     use crate::Chap02::HFSchedulerMtEph::HFSchedulerMtEph::*;
    |                ^^^^^^ could not find `Chap02` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:233:9
    |
232 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap02")))]
    |                                                 ---------------------------------------------- the item is gated here
233 | pub mod Chap02 {
    |         ^^^^^^

error[E0425]: cannot find function `join` in this scope
  --> src/ParaPairs.rs:72:22
   |
72 |         let (a, b) = join(f1, f2);
   |                      ^^^^ not found in this scope

error[E0425]: cannot find function `join` in this scope
  --> src/ParaPairs.rs:94:22
   |
94 |         let (a, b) = join(f1, f2);
   |                      ^^^^ not found in this scope

error[E0425]: cannot find function `join` in this scope
  --> src/standards/hfscheduler_standard.rs:92:22
   |
92 |         let (a, b) = join(f1, f2);
   |                      ^^^^ not found in this scope

error[E0425]: cannot find function `join` in this scope
   --> src/standards/hfscheduler_standard.rs:130:24
    |
130 |         let ((), ()) = join(f1, f2);
    |                        ^^^^ not found in this scope

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 25362MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
